// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands add it should clean the cache when cache lives inside the project 1`] = `
Array [
  ".gitignore",
  "no-deps-npm-1.0.0-7b98016e47.zip",
]
`;

exports[`Commands add it should clean the cache when cache lives inside the project 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ no-deps@npm:2.0.0 can't be found in the cache and will be fetched from the remote registry
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: ┌ Cache cleanup step
➤ YN0019: │ no-deps-npm-1.0.0-7b98016e47.zip seems to be unused
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;

exports[`Commands add it should clean the cache when cache lives inside the project 3`] = `
Array [
  ".gitignore",
  "no-deps-npm-2.0.0-3a294cf20b.zip",
]
`;

exports[`Commands add it should not clean the cache when cache lives outside the project 1`] = `
Array [
  ".gitignore",
  "no-deps-npm-1.0.0-7b98016e47.zip",
]
`;

exports[`Commands add it should not clean the cache when cache lives outside the project 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ no-deps@npm:2.0.0 can't be found in the cache and will be fetched from the remote registry
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: ┌ Cache cleanup step
➤ YN0054: │ skipping cleanup since cache folder is not inside project folder
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;

exports[`Commands add it should not clean the cache when cache lives outside the project 3`] = `
Array [
  ".gitignore",
  "no-deps-npm-1.0.0-7b98016e47.zip",
  "no-deps-npm-2.0.0-3a294cf20b.zip",
]
`;
